--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 #main {
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 #hero {
@@ -31,23 +33,15 @@ html {
 
 body {
     width: 100%;
-    height: 100%;
-    clip: auto;
-    position: absolute;
-    overflow: hidden;
+    height: auto;
     margin: 0;
+    padding: 0;
 }
 
 #heroimage {
 }
 
-#nav {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    z-index: 0;
-}
+
 
 #navlink1 {
     display: table;
@@ -128,4 +122,10 @@ body {
 a {
   color: white;
   text-decoration: none; /* no underline */
+}
+
+#nav {
+    height: 100%;
+    width: 100%;
+    position: absolute;
 }
