--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 #main {
     width: 100%;
-    height: 100%;
+    height: auto;
     margin: 0;
     padding: 0;
 }
@@ -37,6 +37,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    
 }
 
 #heroimage {
@@ -128,7 +129,6 @@ a {
     height: 100%;
     width: 100%;
 	position: absolute;
-    position: absolute;
 }
 
 #navtext1 {
