--- a/About/about.css
+++ b/About/about.css
@@ -67,9 +67,8 @@ body {
 #nav {
     width: 100%;
     max-width: 1000px;
-    height: 17%;
+    height: 15%;
     position: absolute;
-    position: fixed;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -166,7 +165,7 @@ body {
     max-width: 1000px;
     height: auto;
     z-index: 2;
-    top: 23%;
+    top: 21%;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -182,6 +181,7 @@ body {
     height: auto;
     margin: auto;
     position: relative;
+    padding: 1em;
 }
 
 h1 {
