--- a/Plans/plans.css
+++ b/Plans/plans.css
@@ -69,7 +69,7 @@ body {
 #nav {
     width: 100%;
     max-width: 1000px;
-    height: 17%;
+    height: 15%;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
@@ -168,7 +168,7 @@ body {
     max-width: 1000px;
     height: auto;
     z-index: 2;
-    top: 23%;
+    top: 21%;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -184,6 +184,7 @@ body {
     height: auto;
     margin: auto;
     position: relative;
+    padding-bottom: 1em;
 }
 
 h1 {
@@ -246,4 +247,12 @@ li {
 
 h4 {
     font-family: "Open Sans", serif;
+}
+
+hr {
+    	border-top: 1px dashed #8c8b8b;
+}
+
+h5 {
+    font-family:  "Open Sans",serif;
 }
