--- a/Media/media.css
+++ b/Media/media.css
@@ -29,7 +29,7 @@ body {
     margin-right: auto;
     left: 0;
     right: 0;
-    height: 15%;
+    height: 10%;
     background: #16222A;  /* fallback for old browsers */
     background: #FF8008;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #FFC837, #FF8008);  /* Chrome 10-25, Safari 5.1-6 */
@@ -67,7 +67,7 @@ body {
 #nav {
     width: 100%;
     max-width: 1000px;
-    height: 15%;
+    height: 9.5%;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
@@ -87,8 +87,8 @@ body {
     padding: 0;
     margin: 0;
     background: #56CCF2;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #2f61ed, #56a9f1);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #2f61ed, #56a9f1); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #2f61ed, #56a9f1);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     position: relative;
 }
 #navlink1:hover {
@@ -166,7 +166,7 @@ body {
     max-width: 1000px;
     height: auto;
     z-index: 2;
-    top: 21%;
+    top: 15.5%;
     left: 0;
     right: 0;
     margin-left: auto;
